WIP gameplay, assets for music

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -42,7 +42,8 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0",
     "com.cysharp.unitask": "2.2.5",
-    "com.demigiant.dotween": "1.2.632"
+    "com.demigiant.dotween": "1.2.632",
+    "com.neuecc.unirx": "7.1.0"
   },
   "scopedRegistries": [
     {
@@ -51,6 +52,7 @@
       "scopes": [
         "com.cysharp.unitask",
         "com.demigiant.dotween",
+        "com.neuecc.unirx",
         "com.openupm"
       ]
     }
